fix: Ensure item title in sidebar doesn’t wrap
(May break layout)

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -255,6 +255,7 @@
 
       .title {
         flex: 1;
+        white-space: nowrap;
         line-height: 1;
         font-weight: normal;
         font-size: 15px;
